# safetensors.cpp

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
attacks/: paddle_ace_create.py
bindings/c/: CMakeLists.txt
bindings/c/src/: lib.rs
bindings/cpp/: CMakeLists.txt  Cargo.toml  build.rs
bindings/cpp/benchmark/: CMakeLists.txt  bench.cpp  bench.py
bindings/cpp/cmake/: safetensors_cppConfig.cmake.in
bindings/cpp/examples/: safe_open_example.cpp
bindings/cpp/include/safetensors/: mmap.hpp  safetensors.hpp
bindings/cpp/src/: conversion.rs  lib.rs  mmap.cpp
dev/bench/: data.js
